# test-experiment

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  clean.bat  clean.sh  conanfile.txt  test.bat  test.sh
.github/workflows/: ci.yml
src/: main.c  unit.c  unit.h
tests/: CMakeLists.txt  dummy_test.py  dummy_test.sh  unit_test.c  utils.py
